# support-ticket-triage

./: .gitignore  README.md  VIDEO_SCRIPT.md  pyproject.toml  requirements.txt
data/: train.csv
reports/: metrics.json  pytest_output.txt  train_output.txt
scripts/: predict_holdout.sh  train.sh
src/ticket_triage/: __init__.py  config.py  data.py  evaluation.py  leakage.py  model.py  predict_csv.py  predictor.py  train.py  validation.py
tests/: test_leakage.py  test_predict_csv.py  test_predictor.py  test_validation.py
